Fix the !ENABLE(PAGE_VISIBILITY_API) build https://bugs.webkit.org/show_bug.cgi?id=127907

Reviewed by Brent Fulgham.

* page/Page.cpp:
(WebCore::Page::setIsVisible):


Canonical link: https://commits.webkit.org/146284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163498 268f45cc-cd09-0410-ab3c-d52691b4dbfc